Fix TYPO and Add RandomForest brief overview

--- a/advanced/RandomForest.ipynb
+++ b/advanced/RandomForest.ipynb
@@ -35,6 +35,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "RandomForestはランダムに説明変数を引数`max_features`の数だけ持つ決定木を引数`n_estimator`の数だけ作り  \n",
+    "コンセンサスを取ることで精度を上げるアンサンブル機械学習である。`max_features`はデフォルトでは説明変数の数の平方根である。  \n",
+    "(例えばクラス分類の時、精度が50%以上の分類器を複数用意しコンセンサスを取ることで精度が増すことは数学的に証明されている)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. RandomForestClassifier"
    ]
   },
@@ -58,7 +67,7 @@
    "source": [
     "Toyデータを用意する。  \n",
     "[make_classification](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_classification.html#sklearn.datasets.make_classification)関数を使うと自身が望むようなクラス分類の検証のためのサンプルデータを用意することができる。  \n",
-    "今回は`サンプル数=100`, `説明変数の数=10`, `クラス数=2` そして再現性を担保するために`random_state=0`, `shuffle=False`とした。"
+    "今回は`サンプル数=1000`, `説明変数の数=10`, `クラス数=2` そして再現性を担保するために`random_state=0`, `shuffle=False`とした。"
    ]
   },
   {
@@ -558,7 +567,7 @@
    "source": [
     "Toyデータを用意する。  \n",
     "[make_regression](http://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_regression.html)関数を使うと自身が望むような回帰分析の検証のためのサンプルデータを用意することができる。  \n",
-    "今回は`サンプル数=100`, `説明変数の数=10`, そして再現性を担保するために`random_state=0`, `shuffle=False`とした。"
+    "今回は`サンプル数=1000`, `説明変数の数=10`, そして再現性を担保するために`random_state=0`, `shuffle=False`とした。"
    ]
   },
   {
@@ -1025,7 +1034,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "正答率は約8386.7であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
+    "RMSEは約8386.7であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
    ]
   }
  ],
