use accuracy_score and add max_depth explanation

--- a/advanced/RandomForest.ipynb
+++ b/advanced/RandomForest.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "from sklearn.datasets import make_classification, make_regression\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "\n",
     "print(sys.version_info)"
    ]
@@ -355,6 +355,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[accuracy_score](http://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html#sklearn.metrics.accuracy_score)関数を用いてTraining setの正答率を求めてみる。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -371,7 +378,7 @@
     }
    ],
    "source": [
-    "sum(clf.predict(X_clf) == y_clf) / 1000 * 100"
+    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
    ]
   },
   {
@@ -456,7 +463,7 @@
     }
    ],
    "source": [
-    "sum(clf.predict(X_clf) == y_clf) / 1000 * 100"
+    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
    ]
   },
   {
@@ -523,7 +530,27 @@
     }
    ],
    "source": [
-    "sum(clf.predict(X_clf) == y_clf) / 1000 * 100"
+    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_clf.shape[0]"
    ]
   },
   {
@@ -531,6 +558,21 @@
    "metadata": {},
    "source": [
     "正答率は約96.1%であった。わずかであるが決定木をより複雑にできるようにすることで正答率があがった。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ただし、冒頭でも伝えたようにRandomForestは複数の分類器によるコンセンサスで精度を上げるため  \n",
+    "一つ一つの分類機は弱学習器でよく、最大の深さである`max_depth`はあまり変化させる必要がない。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "むしろ、決定木に使う説明変数の数である`max_features`の数を変化させて最適化することのほうが多い。"
    ]
   },
   {
@@ -572,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +734,7 @@
        "4  0.777490 -1.613898 -0.212740  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +755,7 @@
        "        -98.76061926])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +782,7 @@
        "(1000, 10)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +829,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +908,7 @@
        "11343.859988077465"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +955,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +994,7 @@
        "11328.125407195668"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1041,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1062,7 @@
        "8386.7244700410702"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
