--- a/advanced/RandomForest.ipynb
+++ b/advanced/RandomForest.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "RandomForestはランダムに説明変数を引数`max_features`の数だけ持つ決定木を引数`n_estimator`の数だけ作り  \n",
-    "コンセンサスを取ることで精度を上げるアンサンブル機械学習である。`max_features`はデフォルトでは説明変数の数の平方根である。  \n",
+    "コンセンサスを取ることで精度を上げるアンサンブル機械学習である。`max_features`はデフォルトではすべての説明変数の数の平方根である。  \n",
     "(例えばクラス分類の時、精度が50%以上の分類器を複数用意しコンセンサスを取ることで精度が増すことは数学的に証明されている)"
    ]
   },
@@ -378,7 +378,8 @@
     }
    ],
    "source": [
-    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
+    "y_predicted = clf.predict(X_clf)\n",
+    "accuracy_score(y_predicted, y_clf) * 100"
    ]
   },
   {
@@ -463,7 +464,8 @@
     }
    ],
    "source": [
-    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
+    "y_predicted = clf.predict(X_clf)\n",
+    "accuracy_score(y_predicted, y_clf) * 100"
    ]
   },
   {
@@ -530,27 +532,8 @@
     }
    ],
    "source": [
-    "accuracy_score(clf.predict(X_clf), y_clf) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_clf.shape[0]"
+    "y_predicted = clf.predict(X_clf)\n",
+    "accuracy_score(y_predicted, y_clf) * 100"
    ]
   },
   {
@@ -572,7 +555,140 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "むしろ、決定木に使う説明変数の数である`max_features`の数を変化させて最適化することのほうが多い。"
+    "むしろ、以下のように決定木に使う説明変数の数である`max_features`の数を変化させて最適化することのほうが多い。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2.4 決定木で用いる説明変数の数を変化させる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "決定木に用いる説明変数の数である`max_features`の数を3に減らしてみる。  \n",
+    "`max_features`はデフォルトでは全ての説明変数の数の平方根である。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features=3, max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            n_estimators=10, n_jobs=1, oob_score=False, random_state=0,\n",
+       "            verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=10, max_features=3, random_state=0)\n",
+    "clf.fit(X_clf, y_clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.799999999999997"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted = clf.predict(X_clf)\n",
+    "accuracy_score(y_predicted, y_clf) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "続けて、決定木に用いる説明変数の数である`max_features`の数を8にしてみる。  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features=8, max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            n_estimators=10, n_jobs=1, oob_score=False, random_state=0,\n",
+       "            verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(n_estimators=10, max_features=8, random_state=0)\n",
+    "clf.fit(X_clf, y_clf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99.700000000000003"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted = clf.predict(X_clf)\n",
+    "accuracy_score(y_predicted, y_clf) * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今回の例では用いる説明変数の数を少なくすることで正答率があがった。  \n",
+    "用いる説明変数の数が多すぎると分類器に差がなくなることもあり単純に増やせばよいというわけではない。  \n",
+    "説明変数の数を色々変化させてcross validationを行うのが最も良い。"
    ]
   },
   {
@@ -614,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +850,7 @@
        "4  0.777490 -1.613898 -0.212740  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +871,7 @@
        "        -98.76061926])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +898,7 @@
        "(1000, 10)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +945,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +1024,7 @@
        "11343.859988077465"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +1071,7 @@
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1110,7 @@
        "11328.125407195668"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1037,32 +1153,32 @@
        "           max_features='auto', max_leaf_nodes=None,\n",
        "           min_impurity_split=1e-07, min_samples_leaf=1,\n",
        "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           n_estimators=100, n_jobs=1, oob_score=False, random_state=0,\n",
+       "           n_estimators=10, n_jobs=1, oob_score=False, random_state=0,\n",
        "           verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regr = RandomForestRegressor(n_estimators=100, max_depth=3, random_state=0)\n",
+    "regr = RandomForestRegressor(n_estimators=10, max_depth=3, random_state=0)\n",
     "regr.fit(X_regr, y_regr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8386.7244700410702"
+       "8462.4899704699292"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,6 +1193,137 @@
    "metadata": {},
    "source": [
     "RMSEは約8386.7であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.4 決定木で用いる説明変数の数を変化させる"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "決定木に用いる説明変数の数である`max_features`の数を3に減らしてみる。  \n",
+    "`max_features`はデフォルトでは全ての説明変数の数の平方根である。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features=3, max_leaf_nodes=None, min_impurity_split=1e-07,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regr = RandomForestRegressor(n_estimators=10, max_features=3, random_state=0)\n",
+    "regr.fit(X_regr, y_regr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "970.52943197845366"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted = regr.predict(X_regr)\n",
+    "mean_squared_error(y_regr, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "続けて、決定木に用いる説明変数の数である`max_features`の数を8にしてみる。  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features=8, max_leaf_nodes=None, min_impurity_split=1e-07,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=0, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regr = RandomForestRegressor(n_estimators=10, max_features=8, random_state=0)\n",
+    "regr.fit(X_regr, y_regr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "873.40663827214928"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_predicted = regr.predict(X_regr)\n",
+    "mean_squared_error(y_regr, y_predicted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今回の例では用いる説明変数の数を増やすことで正答率があがった。  \n",
+    "ただ、用いる説明変数の数が多すぎると分類器に差がなくなることもあり単純に増やせばよいというわけではない。  \n",
+    "説明変数の数を色々変化させてcross validationを行うのが最も良い。"
    ]
   }
  ],
