Add changing max_depth cross validation

--- a/advanced/DesicionTree.ipynb
+++ b/advanced/DesicionTree.ipynb
@@ -25,7 +25,7 @@
     "import pandas as pd\n",
     "from sklearn.datasets import load_iris, load_boston\n",
     "from sklearn.externals.six import StringIO\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor, export_graphviz\n",
     "import sys\n",
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "正答率を求める。"
+    "[accuracy_score](http://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html#sklearn.metrics.accuracy_score)関数を用いてTraining setの正答率を求めてみる。"
    ]
   },
   {
@@ -278,7 +278,22 @@
     }
    ],
    "source": [
-    "sum(y_iris == y_predicted) / len(y_iris) * 100"
+    "accuracy_score(y_predicted, y_iris) *100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "正答率は100%であった。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "これはデフォルトでは、完全にデータを分離されるかあるいはノードに含まれるデータが最低2つになるまで  \n",
+    "ノードを伸長していくように設定されているからである。"
    ]
   },
   {
@@ -554,7 +569,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f4c89188d30>"
+       "<graphviz.files.Source at 0x7fd4f3e11be0>"
       ]
      },
      "execution_count": 8,
@@ -679,7 +694,7 @@
      "data": {
       "text/plain": [
        "array([ 1.        ,  0.93333333,  1.        ,  0.93333333,  0.93333333,\n",
-       "        0.86666667,  0.93333333,  0.93333333,  1.        ,  1.        ])"
+       "        0.86666667,  0.93333333,  1.        ,  1.        ,  1.        ])"
       ]
      },
      "execution_count": 10,
@@ -690,6 +705,45 @@
    "source": [
     "clf = DecisionTreeClassifier(random_state=None)\n",
     "cross_val_score(clf, X_iris, y_iris, cv=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このようにcross validationを行う時に、以下のように`max_depth`の値を変化させて性能の差を比較し、  \n",
+    "最もよい性能の時のmax_depthを採用するという判断もできる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_depth=1, score=0.6666666666666667\n",
+      "max_depth=2, score=0.9533333333333334\n",
+      "max_depth=3, score=0.96\n",
+      "max_depth=4, score=0.96\n",
+      "max_depth=5, score=0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "for max_depth in range(1, 6):\n",
+    "    clf = DecisionTreeClassifier(random_state=None, max_depth=max_depth)\n",
+    "    score = cross_val_score(clf, X_iris, y_iris, cv=10)\n",
+    "    print(f'max_depth={max_depth}, score={score.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今回の例では、`max_depth=1`の時は少しスコアが低いが、それ以降はほぼ同性能である。"
    ]
   },
   {
@@ -717,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +909,7 @@
        "4  396.90  5.33  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +929,7 @@
        "array([ 24. ,  21.6,  34.7,  33.4,  36.2])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +949,7 @@
        "(506, 13)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +976,7 @@
        "array([ 24. ,  21.6,  34.7,  33.4,  36.2])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -954,7 +1008,7 @@
        "0.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,14 +1022,21 @@
    "metadata": {},
    "source": [
     "性能が良すぎてmean_squared_errorなどが正しく動いているかわかりにくい。  \n",
-    "これはデフォルトでは完全にデータを分離するまでノードを伸長していくように設定されているからである。  \n",
+    "これはデフォルトでは、完全にデータを分離されるかあるいはノードに含まれるデータが最低2つになるまで  \n",
+    "ノードを伸長していくように設定されているからである。  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "そこで`max_depth=3`とし決定木の最大の深さを3に設定してみる。  \n",
     "max_depthの値を小さくするほどより不正確になるが、過学習しなくなったり、決定木は簡単になり解釈がしやすくなることもある。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1045,7 @@
        "array([ 22.9052    ,  22.9052    ,  33.34883721,  33.34883721,  33.34883721])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -1016,7 +1077,7 @@
        "15.423306191629862"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1092,17 +1153,17 @@
        "</g>\n",
        "<!-- 8 -->\n",
        "<g id=\"node9\" class=\"node\"><title>8</title>\n",
-       "<path fill=\"#e58139\" fill-opacity=\"0.737255\" stroke=\"black\" d=\"M781,-261C781,-261 671,-261 671,-261 665,-261 659,-255 659,-249 659,-249 659,-205 659,-205 659,-199 665,-193 671,-193 671,-193 781,-193 781,-193 787,-193 793,-199 793,-205 793,-205 793,-249 793,-249 793,-255 787,-261 781,-261\"/>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-245.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[5] &lt;= 7.437</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-230.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 79.7292</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-215.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 76</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-200.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 37.2382</text>\n",
+       "<path fill=\"#e58139\" fill-opacity=\"0.737255\" stroke=\"black\" d=\"M780,-261C780,-261 670,-261 670,-261 664,-261 658,-255 658,-249 658,-249 658,-205 658,-205 658,-199 664,-193 670,-193 670,-193 780,-193 780,-193 786,-193 792,-199 792,-205 792,-205 792,-249 792,-249 792,-255 786,-261 780,-261\"/>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-245.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[5] &lt;= 7.437</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-230.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 79.7292</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-215.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 76</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-200.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 37.2382</text>\n",
        "</g>\n",
        "<!-- 0&#45;&gt;8 -->\n",
        "<g id=\"edge8\" class=\"edge\"><title>0&#45;&gt;8</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M628.077,-296.884C641.5,-287.442 656.253,-277.064 670.144,-267.292\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"672.497,-269.916 678.663,-261.299 668.47,-264.19 672.497,-269.916\"/>\n",
-       "<text text-anchor=\"middle\" x=\"674.375\" y=\"-282.229\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">False</text>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M627.753,-296.884C641.082,-287.442 655.734,-277.064 669.529,-267.292\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"671.852,-269.936 677.989,-261.299 667.806,-264.223 671.852,-269.936\"/>\n",
+       "<text text-anchor=\"middle\" x=\"673.782\" y=\"-282.243\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">False</text>\n",
        "</g>\n",
        "<!-- 2 -->\n",
        "<g id=\"node3\" class=\"node\"><title>2</title>\n",
@@ -1180,29 +1241,29 @@
        "</g>\n",
        "<!-- 9 -->\n",
        "<g id=\"node10\" class=\"node\"><title>9</title>\n",
-       "<path fill=\"#e58139\" fill-opacity=\"0.580392\" stroke=\"black\" d=\"M776.5,-157C776.5,-157 675.5,-157 675.5,-157 669.5,-157 663.5,-151 663.5,-145 663.5,-145 663.5,-101 663.5,-101 663.5,-95 669.5,-89 675.5,-89 675.5,-89 776.5,-89 776.5,-89 782.5,-89 788.5,-95 788.5,-101 788.5,-101 788.5,-145 788.5,-145 788.5,-151 782.5,-157 776.5,-157\"/>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-141.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[4] &lt;= 0.659</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-126.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 41.2959</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-111.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 46</text>\n",
-       "<text text-anchor=\"middle\" x=\"726\" y=\"-96.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 32.113</text>\n",
+       "<path fill=\"#e58139\" fill-opacity=\"0.580392\" stroke=\"black\" d=\"M777.5,-157C777.5,-157 672.5,-157 672.5,-157 666.5,-157 660.5,-151 660.5,-145 660.5,-145 660.5,-101 660.5,-101 660.5,-95 666.5,-89 672.5,-89 672.5,-89 777.5,-89 777.5,-89 783.5,-89 789.5,-95 789.5,-101 789.5,-101 789.5,-145 789.5,-145 789.5,-151 783.5,-157 777.5,-157\"/>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-141.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[0] &lt;= 7.3934</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-126.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 41.2959</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-111.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 46</text>\n",
+       "<text text-anchor=\"middle\" x=\"725\" y=\"-96.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 32.113</text>\n",
        "</g>\n",
        "<!-- 8&#45;&gt;9 -->\n",
        "<g id=\"edge9\" class=\"edge\"><title>8&#45;&gt;9</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M726,-192.884C726,-184.778 726,-175.982 726,-167.472\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"729.5,-167.299 726,-157.299 722.5,-167.299 729.5,-167.299\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M725,-192.884C725,-184.778 725,-175.982 725,-167.472\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"728.5,-167.299 725,-157.299 721.5,-167.299 728.5,-167.299\"/>\n",
        "</g>\n",
        "<!-- 12 -->\n",
        "<g id=\"node13\" class=\"node\"><title>12</title>\n",
        "<path fill=\"#e58139\" fill-opacity=\"0.976471\" stroke=\"black\" d=\"M998,-157C998,-157 888,-157 888,-157 882,-157 876,-151 876,-145 876,-145 876,-101 876,-101 876,-95 882,-89 888,-89 888,-89 998,-89 998,-89 1004,-89 1010,-95 1010,-101 1010,-101 1010,-145 1010,-145 1010,-151 1004,-157 998,-157\"/>\n",
-       "<text text-anchor=\"middle\" x=\"943\" y=\"-141.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[5] &lt;= 8.7525</text>\n",
+       "<text text-anchor=\"middle\" x=\"943\" y=\"-141.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">X[0] &lt;= 2.7422</text>\n",
        "<text text-anchor=\"middle\" x=\"943\" y=\"-126.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 36.6283</text>\n",
        "<text text-anchor=\"middle\" x=\"943\" y=\"-111.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 30</text>\n",
        "<text text-anchor=\"middle\" x=\"943\" y=\"-96.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 45.0967</text>\n",
        "</g>\n",
        "<!-- 8&#45;&gt;12 -->\n",
        "<g id=\"edge12\" class=\"edge\"><title>8&#45;&gt;12</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M793.174,-194.425C816.463,-183.478 842.738,-171.128 866.707,-159.861\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"868.209,-163.023 875.77,-155.601 865.231,-156.688 868.209,-163.023\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M792.186,-194.564C815.704,-183.561 842.282,-171.125 866.504,-159.792\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"868.086,-162.916 875.661,-155.507 865.12,-156.575 868.086,-162.916\"/>\n",
        "</g>\n",
        "<!-- 10 -->\n",
        "<g id=\"node11\" class=\"node\"><title>10</title>\n",
@@ -1213,8 +1274,8 @@
        "</g>\n",
        "<!-- 9&#45;&gt;10 -->\n",
        "<g id=\"edge10\" class=\"edge\"><title>9&#45;&gt;10</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M701.867,-88.9485C695.388,-80.0749 688.371,-70.4648 681.854,-61.5388\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"684.516,-59.249 675.792,-53.2367 678.862,-63.3769 684.516,-59.249\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M701.217,-88.9485C694.832,-80.0749 687.916,-70.4648 681.493,-61.5388\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"684.201,-59.3094 675.52,-53.2367 678.519,-63.398 684.201,-59.3094\"/>\n",
        "</g>\n",
        "<!-- 11 -->\n",
        "<g id=\"node12\" class=\"node\"><title>11</title>\n",
@@ -1225,8 +1286,8 @@
        "</g>\n",
        "<!-- 9&#45;&gt;11 -->\n",
        "<g id=\"edge11\" class=\"edge\"><title>9&#45;&gt;11</title>\n",
-       "<path fill=\"none\" stroke=\"black\" d=\"M751.882,-88.9485C758.902,-79.9834 766.511,-70.2666 773.561,-61.2629\"/>\n",
-       "<polygon fill=\"black\" stroke=\"black\" points=\"776.437,-63.2679 779.846,-53.2367 770.925,-58.9521 776.437,-63.2679\"/>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M751.231,-88.9485C758.346,-79.9834 766.058,-70.2666 773.204,-61.2629\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"776.099,-63.2454 779.574,-53.2367 770.616,-58.8938 776.099,-63.2454\"/>\n",
        "</g>\n",
        "<!-- 13 -->\n",
        "<g id=\"node14\" class=\"node\"><title>13</title>\n",
@@ -1243,7 +1304,7 @@
        "<!-- 14 -->\n",
        "<g id=\"node15\" class=\"node\"><title>14</title>\n",
        "<path fill=\"#e58139\" fill-opacity=\"0.270588\" stroke=\"black\" d=\"M1123.5,-53C1123.5,-53 1040.5,-53 1040.5,-53 1034.5,-53 1028.5,-47 1028.5,-41 1028.5,-41 1028.5,-12 1028.5,-12 1028.5,-6 1034.5,-0 1040.5,-0 1040.5,-0 1123.5,-0 1123.5,-0 1129.5,-0 1135.5,-6 1135.5,-12 1135.5,-12 1135.5,-41 1135.5,-41 1135.5,-47 1129.5,-53 1123.5,-53\"/>\n",
-       "<text text-anchor=\"middle\" x=\"1082\" y=\"-37.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = &#45;0.0</text>\n",
+       "<text text-anchor=\"middle\" x=\"1082\" y=\"-37.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">mse = 0.0</text>\n",
        "<text text-anchor=\"middle\" x=\"1082\" y=\"-22.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">samples = 1</text>\n",
        "<text text-anchor=\"middle\" x=\"1082\" y=\"-7.8\" font-family=\"Helvetica,sans-Serif\" font-size=\"14.00\">value = 21.9</text>\n",
        "</g>\n",
@@ -1256,10 +1317,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7f4c888df470>"
+       "<graphviz.files.Source at 0x7fd4f3e11b38>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,9 +1355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1306,7 +1367,7 @@
        "        0.        ,  0.99792244,  0.        ,  0.        ,  0.        ])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,6 +1375,49 @@
    "source": [
     "regressor = DecisionTreeRegressor(max_depth=3)\n",
     "cross_val_score(regressor, X_iris, y_iris, cv=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "このようにcross validationを行う時に、以下のように`max_depth`の値を変化させて性能の差を比較し、  \n",
+    "最もよい性能の時のmax_depthを採用するという判断もできる。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_depth=1, score=0.2901063693451237\n",
+      "max_depth=2, score=0.49216283351605944\n",
+      "max_depth=3, score=0.49958448753462603\n",
+      "max_depth=4, score=0.6\n",
+      "max_depth=5, score=0.5700000000000001\n",
+      "max_depth=6, score=0.6\n",
+      "max_depth=7, score=0.5700000000000001\n",
+      "max_depth=8, score=0.5700000000000001\n",
+      "max_depth=9, score=0.5700000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "for max_depth in range(1, 10):\n",
+    "    regressor = DecisionTreeRegressor(random_state=None, max_depth=max_depth)\n",
+    "    score = cross_val_score(regressor, X_iris, y_iris, cv=10)\n",
+    "    print(f'max_depth={max_depth}, score={score.mean()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "今回の例では、`max_depth=1, 2, 3`の時はスコアが低いが、それ以降はほぼ同性能である。"
    ]
   }
  ],
