--- a/advanced/DecisionTree.ipynb
+++ b/advanced/DecisionTree.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desicion Treeによる機械学習を実行してみる。[参考ドキュメント](http://scikit-learn.org/stable/modules/classes.html#module-sklearn.tree)"
+    "Decision Treeによる機械学習を実行してみる。[参考ドキュメント](http://scikit-learn.org/stable/modules/classes.html#module-sklearn.tree)"
    ]
   },
   {
