--- a/advanced/RandomForest.ipynb
+++ b/advanced/RandomForest.ipynb
@@ -1192,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSEは約8386.7であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
+    "RMSEは約8462.5であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
    ]
   },
   {
@@ -1214,7 +1214,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
