Change RMSE to MSE

--- a/advanced/RandomForest.ipynb
+++ b/advanced/RandomForest.ipynb
@@ -628,7 +628,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "続けて、決定木に用いる説明変数の数である`max_features`の数を8にしてみる。  "
+    "続けて、決定木に用いる説明変数の数である`max_features`の数を8に増やしてみる。  "
    ]
   },
   {
@@ -686,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "今回の例では用いる説明変数の数を少なくすることで正答率があがった。  \n",
+    "今回の例では用いる説明変数の数を減らすことで正答率があがった。  \n",
     "用いる説明変数の数が多すぎると分類器に差がなくなることもあり単純に増やせばよいというわけではない。  \n",
     "説明変数の数を色々変化させてcross validationを行うのが最も良い。"
    ]
@@ -1010,7 +1010,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[mean_squared_error](http://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html)関数を用いてTraining setのRoot Mean Square Error (RMSE) を求めてみる。"
+    "[mean_squared_error](http://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html)関数を用いてTraining setのMean Square Error (MSE) を求めてみる。"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSEは約11343.9であった。"
+    "MSEは約11343.9であった。"
    ]
   },
   {
@@ -1124,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSEは約11328.1であった。わずかであるが決定木の数を増やしよりコンセンサスを取りやすくすることでRMSEが小さくなった。"
+    "MSEは約11328.1であった。わずかであるが決定木の数を増やしよりコンセンサスを取りやすくすることでMSEが小さくなった。"
    ]
   },
   {
@@ -1192,7 +1192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSEは約8462.5であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にRMSEが小さくなった。"
+    "MSEは約8462.5であった。今回のデータセットでは決定木をより複雑にできるようにすることで大幅にMSEが小さくなった。"
    ]
   },
   {
@@ -1264,7 +1264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "続けて、決定木に用いる説明変数の数である`max_features`の数を8にしてみる。  "
+    "続けて、決定木に用いる説明変数の数である`max_features`の数を8に増やしてみる。  "
    ]
   },
   {
@@ -1321,7 +1321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "今回の例では用いる説明変数の数を増やすことで正答率があがった。  \n",
+    "今回の例では用いる説明変数の数を増やすことでMSEが小さくなった。  \n",
     "ただ、用いる説明変数の数が多すぎると分類器に差がなくなることもあり単純に増やせばよいというわけではない。  \n",
     "説明変数の数を色々変化させてcross validationを行うのが最も良い。"
    ]
