Change correlation into determination coefficient

--- a/advanced/Linear-model.ipynb
+++ b/advanced/Linear-model.ipynb
@@ -377,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "また`score`メソッドを用いることで実測値と予測値の間の相関係数の2乗(いわゆるR<sup>2</sup>)を求めることができる。"
+    "また`score`メソッドを用いることで実測値と予測値の間の決定係数(r<sup>2</sup>)を求めることができる。"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`alpha=0.5`とし説明変数の重みや相関係数の2乗が変化するか確認してみる。"
+    "`alpha=0.5`とし説明変数の重みや決定係数が変化するか確認してみる。"
    ]
   },
   {
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "わずかであるが説明変数の重みが変化したり、相関係数の2乗が大きくなったりした。"
+    "わずかであるが説明変数の重みが変化したり、決定係数が大きくなったりした。"
    ]
   },
   {
@@ -784,7 +784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "また`score`メソッドを用いることで実測値と予測値の間の相関係数の2乗(いわゆるR<sup>2</sup>)を求めることができる。"
+    "また`score`メソッドを用いることで実測値と予測値の間の決定係数(r<sup>2</sup>)を求めることができる。"
    ]
   },
   {
@@ -820,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`alpha=0.5`とし説明変数の重みや相関係数の2乗が変化するか確認してみる。"
+    "`alpha=0.5`とし説明変数の重みや決定係数が変化するか確認してみる。"
    ]
   },
   {
@@ -938,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "わずかであるが説明変数の重みが変化したり、相関係数の2乗が大きくなったりした。"
+    "わずかであるが説明変数の重みが変化したり、決定係数が大きくなったりした。"
    ]
   },
   {
@@ -1313,7 +1313,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "おおよそ`λ=0`でLASSOを行ったときと同じ結果が得られた。"
+    "おおよそ`λ=0`でLASSOを行ったときと同じ結果が得られた。  \n",
+    "誤差があるのは、LASSOのアルゴリズムでは反復して最適解に収束しているのが原因だと考えられる。"
    ]
   },
   {
@@ -1465,7 +1466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "また`score`メソッドを用いることで実測値と予測値の間の相関係数の2乗(いわゆるR<sup>2</sup>)を求めることができる。"
+    "また`score`メソッドを用いることで実測値と予測値の間の決定係数(r<sup>2</sup>)を求めることができる。"
    ]
   },
   {
@@ -1501,7 +1502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`alpha=0.5`とし説明変数の重みや相関係数の2乗が変化するか確認してみる。"
+    "`alpha=0.5`とし説明変数の重みや決定係数が変化するか確認してみる。"
    ]
   },
   {
@@ -1642,7 +1643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "説明変数の重みが変化したり、相関係数の2乗が大きくなったりした。"
+    "説明変数の重みが変化したり、決定係数が大きくなったりした。"
    ]
   },
   {
@@ -2017,7 +2018,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "おおよそ`λ=0`でElastic Netを行ったときと同じ結果が得られた。"
+    "おおよそ`λ=0`でElastic Netを行ったときと同じ結果が得られた。  \n",
+    "誤差があるのは、LASSOと同様にElastic Netのアルゴリズムでは反復して最適解に収束しているのが原因だと考えられる。"
    ]
   }
  ],
