--- a/advanced/Preprocessing.ipynb
+++ b/advanced/Preprocessing.ipynb
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`StandardScaler`クラスの引数を`width_mean=True`, `widh_std=False`とすることでセンタリングを行うことができる。"
+    "`StandardScaler`クラスの引数を`with_mean=True`, `with_std=False`とすることでセンタリングを行うことができる。"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`StandardScaler`クラスの引数を`width_mean=False`, `widh_std=True`とすることでスケーリングを行うことができる。"
+    "`StandardScaler`クラスの引数を`with_mean=False`, `with_std=True`とすることでスケーリングを行うことができる。"
    ]
   },
   {
@@ -493,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "オートスケーリング、すなわちセンタリング、スケーリングどちらもしたい場合は`width_mean=True`, `widh_std=True`として行えば良い。"
+    "オートスケーリング、すなわちセンタリング、スケーリングどちらもしたい場合は`with_mean=True`, `with_std=True`として行えば良い。"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`scale`関数の引数を`width_mean=True`, `widh_std=False`とすることでセンタリングを行うことができる。"
+    "`scale`関数の引数を`with_mean=True`, `with_std=False`とすることでセンタリングを行うことができる。"
    ]
   },
   {
