Run in new docker env

--- a/advanced/calculate-RDKit-descriptors.ipynb
+++ b/advanced/calculate-RDKit-descriptors.ipynb
@@ -58,11 +58,11 @@
     {
      "data": {
       "text/plain": [
-       "[<rdkit.Chem.rdchem.Mol at 0x7fc9897bec60>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897becb0>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897bed00>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897bed50>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897beda0>]"
+       "[<rdkit.Chem.rdchem.Mol at 0x7fae579dccb0>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579dcd00>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579dcd50>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579dcda0>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579dcdf0>]"
       ]
      },
      "execution_count": 2,
@@ -92,11 +92,11 @@
     {
      "data": {
       "text/plain": [
-       "[<rdkit.Chem.rdchem.Mol at 0x7fc9897d7670>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897a51c0>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d7490>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d7580>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d75d0>]"
+       "[<rdkit.Chem.rdchem.Mol at 0x7fae579f55d0>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f54e0>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5530>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5670>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f56c0>]"
       ]
      },
      "execution_count": 3,
@@ -124,11 +124,11 @@
     {
      "data": {
       "text/plain": [
-       "[<rdkit.Chem.rdchem.Mol at 0x7fc9897be6c0>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d7760>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d77b0>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d7210>,\n",
-       " <rdkit.Chem.rdchem.Mol at 0x7fc9897d7530>]"
+       "[<rdkit.Chem.rdchem.Mol at 0x7fae579f5620>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5800>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5490>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5710>,\n",
+       " <rdkit.Chem.rdchem.Mol at 0x7fae579f5850>]"
       ]
      },
      "execution_count": 4,
